# overseers-manual-df

./: .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .releaserc.yml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  _typos.toml  biome.json  biome.jsonc  bun.lockb  index.html  package.json  pnpm-lock.yaml  renovate.json  svelte.config.js  tailwind.config.js  tailwind.config.ts  tauri-codegen.toml  tsconfig.json  version  vite.config.js  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  release-please-config.json  renovate.json  semantic-release.yaml
.github/workflows/: build-on-main.yaml  codeql.yml  dependabot-automation.yml  dependency-review.yml  fuzzlite_batch.yaml  fuzzlite_cron.yaml  publish-release.yaml  publish-release.yaml.disabled  release-please.yml  scorecard.yml  semantic-release.yaml  test-on-pr.yaml
docs/: CHANGELOG.md  README.md  app-flow.drawio  app-flow.md  dfr-parsing.drawio
src/: App.tsx  app.html  custom.css  custom.scss  helpers.ts  highlighter.svelte.ts  index.css  index.tsx  search.svelte.ts  searchOptions.svelte.ts  settings.ts  utils.tsx  wrappers.svelte.ts
src-tauri/: .gitignore  Cargo.toml  Tauri.toml  bacon.toml  build.rs  custom.wxs  sample.env  tauri.conf.json  update_bindings  update_bindings.ps1  update_bindings.sh
src-tauri/bindings/: Bindings.d.ts  DFRawJson.d.ts  Filter.ts  GraphicsOptions.ts  GraphicsResults.ts  Info copy.ts  Info.ts  SearchOptions copy.ts  SearchOptions.ts  Summary.ts
src-tauri/capabilities/: base.toml  default.toml  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_query.rs  graphics_query.rs  info.rs  lib.rs  log_event.rs  main.rs  open_explorer.rs  parse_command.rs  raws_query.rs  search_query.rs  settings_query.rs  shared_structs.rs  state.rs  tracking.rs  utility.rs
src-tauri/src/biome/: lookup.rs  mod.rs
src-tauri/src/graphics/: mod.rs  options.rs  results.rs  search.rs
src-tauri/src/parser/: conversion.rs  mod.rs  parsing.rs  reader.rs
src-tauri/src/parser/raws/: biomes.rs  creature.rs  mod.rs  names.rs  plants.rs  tags.rs
src-tauri/src/parsing/: passthrough.rs
src-tauri/src/search_handler/: filtering.rs  mod.rs  options.rs  prepare.rs  results.rs  search.rs  summary.rs  util.rs
src-tauri/src/search_handler/search_strings/: common.rs  creature.rs  mod.rs
src-tauri/tests/: bindings.rs  filters.rs
src/bindings/: Commands.ts  DFRawParser.d.ts  Structs.ts
src/classes/: Creature.ts  Raw.ts
src/components/: AdvancedSearch.svelte  AlphaLinks.tsx  AnnouncementForm.tsx  AnnouncementsEditor.tsx  BotanicalCard.tsx  CreateDescriptionTable.tsx  CreatureActivityDisplay.tsx  CreatureBadges.tsx  CreatureBodySizeTable.tsx  CreatureCard.tsx  CreatureGrazerTable.tsx  CreatureListTable.tsx  CreatureListing.tsx  CreatureMilkTable.tsx  CreatureNamesTable.tsx  CreatureNumberTable.tsx  DFDirectoryNotSet.tsx  DirectoryProvider.tsx  DynamicAccordion.tsx  DynamicCard.tsx  HeaderBar.tsx  InfoCard.svelte  Listing.tsx  ListingBestiary.tsx  ListingBotanicals.tsx  Listings.tsx  LoadingRawsProgress.tsx  MenuBar.tsx  NavigationMenu.svelte  ParsedModInfo.tsx  ParsingProgressBar.tsx  RawDetailsTab.tsx  RawJsonTab.tsx  RawModuleFilter.tsx  RawModuleInfoTable.tsx  RawPathDisplay.tsx  RawsDetailTable.tsx  ScrollToTopBtn.tsx  SearchBox.svelte  SearchBox.tsx  (+8 more)
src/components/creature/: CreateDescriptionTable.tsx  CreatureAccordion.tsx  CreatureActivityDisplay.tsx  CreatureBadges.tsx  CreatureBodySizeTable.tsx  CreatureCard.tsx  CreatureGrazerTable.tsx  CreatureListTable.tsx  CreatureMilkTable.tsx  CreatureNamesTable.tsx  CreatureNumberTable.tsx
src/components/filtering/: BiomeCheckboxes.tsx  BiomeFiltering.tsx  DisplayFilters.tsx  FilterButton.tsx  ModuleFiltering.tsx  RawLocationCheckboxes.tsx  RawModuleFilter.tsx  RawTypeCheckboxes.tsx  SearchFilters.tsx  SettingsModal.tsx  ShowFilterButton.tsx  TagFilterModal.tsx  TagIncludeFilter.tsx
src/components/inorganic/: InorganicAccordion.tsx  InorganicCard.tsx  InorganicDescriptionTable.tsx
src/components/material/: AllNamesTable.tsx  StateNameTable.tsx  TemperatureTable.tsx
src/components/menu/: AdvancedFiltersButton.tsx  AppDrawerButton.tsx  AppDrawerContent.tsx  DisplayStyleButton.tsx  GameReferenceButton.tsx  GraphicsToggleButton.tsx  MenuBar.tsx  OpenSettingsButton.tsx  Pagination.tsx  RawTypeCheckboxes.tsx  ReloadRawsButton.tsx  SearchBox.tsx  SetDirectoryButton.tsx  TagRestrictionButton.tsx  ThemeChangeButton.tsx  ToolboxButton.tsx  UpdateAvailable.tsx
src/components/pages/: ReferenceManual.tsx  Settings.tsx
src/definitions/: Announcements.ts  Biome.ts  BodySize.ts  Caste.ts  CasteTag.ts  Color.ts  ColorModification.ts  Condition.ts  Creature.ts  CreatureEffect.ts  CreatureEffectProperty.ts  CreatureEffectToken.ts  CreatureTag.ts  CreatureUtil.ts  CreatureVariation.ts  CreatureVariationRule.ts  CustomGraphicExtension.ts  DFBodySize.ts  DFCaste.ts  DFColor.ts  DFCreature.ts  DFMilkable.ts  DFPlant.ts  DFRawJson.d.ts  DFTile.ts  Dimensions.ts  Entity.ts  EntityToken.ts  EnvironmentClass.ts  FuelType.ts  Gait.ts  GaitType.ts  Graphic.ts  GraphicCondition.ts  GraphicGrowthTag.ts  GraphicType.ts  GraphicsOptions.ts  GraphicsResults.ts  GrowthTag.ts  GrowthType.ts  (+67 more)
src/lib/: Biomes.ts  Constants.ts  CreatureUtil.ts  DirectoryActions.ts  Filters.ts  GameTicks.ts  Modules.ts  PlantUtil.ts  Raw.ts  Utils.ts
src/pages/: About.tsx  ReferenceManual.tsx  Settings.tsx  UpdateDetails.tsx
src/plugins/: store.ts
src/providers/: DirectoryProvider.tsx  RawsProvider.tsx  SearchProvider.tsx  SettingsProvider.tsx  ThemeProvider.tsx  UpdateProvider.tsx
src/routes/: +layout.svelte  +page.svelte  catppuccinTheme.latte.ts  catppuccinTheme.macchiato.ts  layout.css
src/routes/history/: page.css  (+1 more)
src/sass/: _variables-dwarf.scss  button-links.scss  custom.scss  main.scss
src/state/: favorites.svelte.ts  parserState.svelte.ts  results.svelte.ts  search.svelte.ts  searchDefaults.svelte.ts  settings.svelte.ts  theme.svelte.ts
src/styles/: _variables-dwarf.css  animations.css  button-links.css  custom.css  scrollbar.css
(+25 files in other folders)
