[package]
name = "overseers-manual-tauriapp"
version = "0.1.1"
description = "A Tauri App to analyze your Dwarf Fortress raw files and present a searchabled reference"
authors = ["Nicholas Westerhausen"]
license = "MIT"
repository = "github.com:nwesterhausen/overseers-manual-df.git"
default-run = "overseers-manual-tauriapp"
edition = "2021"
rust-version = "1.70"
keywords = ["tauri", "dwarf_fortress", "gaming", "utility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies.tauri-build]
version = "2.0.0-alpha.13"
features = ['config-toml']

[build-dependencies.built]
version = "0.7"
features = ["git2", "chrono", "cargo-lock"]

[dependencies]
# A nice time library
chrono = "0.4"
# Used to load the .env file during build
dotenvy_macro = "0.15.7"
itertools = "0.12.0"
# Used for logging
log = "0.4.20"
# Part of the TS_RS requirements, also used in our custom commands
serde_json = "1.0"
# Part of the TS_RS requirements.
typetag = "0.2"

[dependencies.tauri]
version = "2.0.0-alpha.20"
features = ["protocol-asset"]

# Required for adding invoke commands to tauri app
[dependencies.serde]
version = "1.0"
features = ["derive"]

# Used to parse the raw files into json
[dependencies.dfraw_json_parser]
git = "https://github.com/nwesterhausen/dfraw_json_parser"
branch = "v2"
features = ["tauri"]

# Used to provide centralized logging
[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[dependencies.tauri-plugin-window-state]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

# Used to provide the tauri fs api to the frontend.
[dependencies.tauri-plugin-fs]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

# Used to store data to disk.
[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

# Used to open dialog windows.
[dependencies.tauri-plugin-dialog]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

# Used to relaunch the process (after an update).
[dependencies.tauri-plugin-process]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }

# Used to collect anonymized usage data about app usage
# and active versions.
[dependencies.tauri-plugin-aptabase]
git = "https://github.com/aptabase/tauri-plugin-aptabase"
branch = "v2"

# Used to generate interface/type definitions for the structs used to
# send data between the frontend and backend.
[dependencies.ts-rs]
version = "7.0"
default-features = true
features = ["serde-compat"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true      # Automatically strip symbols from the binary.

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "app_lib"
