[package]
name = "overseers-manual-tauriapp"
version = "0.2.0"
description = "A Tauri App to analyze your Dwarf Fortress raw files and present a searchabled reference"
authors = ["Nicholas Westerhausen"]
license = "MIT"
repository = "github.com:nwesterhausen/overseers-manual-df.git"
edition = "2021"
keywords = ["tauri", "dwarf_fortress", "gaming", "utility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "overseers_reference_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies.tauri-build]
version = "2"
features = ['config-toml']

[build-dependencies.dfraw_json_parser]
version = "0"
#path = "../../dfraw_parser/jsonlib"
git = "https://github.com/nwesterhausen/dfraw_parser"

[dependencies]
chrono = "0.4.42"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tracing = "0.1"
tracing-subscriber = {version = "0.3.22", features = ["registry", "env-filter"] }
tracing-appender = "0.2.4"
uuid = {version = "0", features = ["serde", "v5"] }

[dependencies.dfraw_parser]
version = "0"
# path = "../../dfraw_parser/lib"
git = "https://github.com/nwesterhausen/dfraw_parser"

[dependencies.dfraw_parser_sqlite_lib]
version = "0"
# path = "../../dfraw_parser/sqlite_lib"
git = "https://github.com/nwesterhausen/dfraw_parser"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
